testdata/baselines/reference/submodule/compiler/jsxChildrenArrayWrongType.errors.txt
index.tsx(12,9): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type 'unknown' is not assignable to type 'string | boolean'.
index.tsx(13,9): error TS2769: No overload matches this call.
  The last overload gave the following error.
    Type 'string' is not assignable to type 'number | boolean'.


==== index.tsx (2 errors) ====
    /// <reference path="/.lib/react18/react18.d.ts" />
    /// <reference path="/.lib/react18/global.d.ts" />
    
    // target is ES5, so no `Iterable` type is present.
    
    interface PropsType {
        children: [string, number] | boolean[];
    }
    declare class Foo extends React.Component<PropsType, {}> {}
    const b = (
        <Foo>
            {<div/> as unknown}
            ~~~~~~~~~~~~~~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type 'unknown' is not assignable to type 'string | boolean'.
!!! related TS2771 react18/react18.d.ts:478:9: The last overload is declared here.
            {"aa"}
            ~~~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   The last overload gave the following error.
!!! error TS2769:     Type 'string' is not assignable to type 'number | boolean'.
!!! related TS2771 react18/react18.d.ts:478:9: The last overload is declared here.
        </Foo>
    );